fix: V2 - remove spacing in main h1 heading

--- a/assets/sass/components/headings.scss
+++ b/assets/sass/components/headings.scss
@@ -21,10 +21,6 @@
     }
 }
 
-.main-heading {
-    white-space: break-spaces;
-}
-
 .heading--h2 {
     color: v.$text-color;
     font-size: 35px;
